syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/account.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message CreateAccountRequest {
  string username = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
  int64 account_type = 5;
}

message CreateAccountResponse {
  Account account = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}